--- a/app/jian-zhan/JianZhan.module.css
+++ b/app/jian-zhan/JianZhan.module.css
@@ -266,10 +266,12 @@
   box-shadow: 0 30px 80px rgba(0, 0, 0, 0.6);
 }
 
-.scopeImage img {
+.scopeImage img,
+.scopeImage video {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  display: block;
 }
 
 /* Master's Work Section */
@@ -420,4 +422,9 @@
     max-width: 350px;
   }
 }
+
+
+
+
+
 
